--- a/inventario.html
+++ b/inventario.html
@@ -25,7 +25,7 @@
     <!-- CONTENIDO PRINCIPAL -->
     <main class="flex-grow-1 p-4">
         <header class="text-center mb-4">
-          <h1>🛍️ Productos disponibles</h1>
+          <h1>Productos disponibles</h1>
           <p class="text-muted">Elige cantidad y haz clic en “Agregar al carrito”</p>
         </header>
       
